--- a/CloudyWeather/Base.lproj/LaunchScreen.storyboard
+++ b/CloudyWeather/Base.lproj/LaunchScreen.storyboard
@@ -26,8 +26,8 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inradar" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QUX-dM-0zt">
-                                <rect key="frame" x="130.5" y="313.5" width="114" height="40.5"/>
-                                <fontDescription key="fontDescription" name="Didot-Bold" family="Didot" pointSize="32"/>
+                                <rect key="frame" x="98.5" y="298.5" width="178.5" height="70"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="51"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
